# tracely

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-01-mcp-server-v2-features.md  2026-05-01-perfetto-mcp-server.md
mcp_server/: __main__.py  server.py
mcp_server/core/: capture.py  query_engine.py
mcp_server/resources/: android_analysis.md
mcp_server/tests/: test_query_engine.py  test_trace_manager.py
mcp_server/tools/: __init__.py  anr.py  binder.py  blocking.py  capture_tools.py  contention.py  core_tools.py  diagnose.py  gc.py  heap.py  input_latency.py  jank.py  lmk.py  memory.py  network.py  oom.py  query_tools.py  regression.py  scheduling.py  startup.py  surfaceflinger.py
tracely/: __main__.py  server.py
tracely-desktop/: build.gradle.kts  settings.gradle.kts
tracely-desktop/core/: build.gradle.kts
tracely-desktop/mcp/: build.gradle.kts
tracely-desktop/mcp/src/main/kotlin/dev/tracely/mcp/: McpMain.kt  TracelyMcpServer.kt
tracely-desktop/ui/: build.gradle.kts
tracely/core/: capture.py  device.py  query_engine.py  trace_manager.py
tracely/resources/: android_analysis.md
tracely/tests/: test_query_engine.py  test_trace_manager.py
tracely/tools/: __init__.py  anr.py  binder.py  blocking.py  capture_tools.py  contention.py  core_tools.py  diagnose.py  gc.py  heap.py  input_latency.py  jank.py  lmk.py  memory.py  network.py  oom.py  query_tools.py  regression.py  scheduling.py  startup.py  surfaceflinger.py
tracely/ui/: __init__.py  app.py
tracely/ui/routes/: api_analysis.py  api_capture.py  api_devices.py  api_library.py  api_traces.py  pages.py
tracely/ui/services/: analysis.py  library.py
tracely/ui/static/css/: style.css
tracely/ui/static/js/: app.js
tracely/ui/templates/: analysis.html  base.html  capture.html  dashboard.html  library.html
(+28 files in other folders)
