[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracely"
version = "0.2.0"
description = "AI-powered Android trace analysis via Perfetto MCP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "perfetto",
]

[project.scripts]
tracely = "tracely.server:main"
tracely-ui = "tracely.ui.app:main"

[project.optional-dependencies]
ui = [
    "jinja2",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracely*"]

[tool.setuptools.package-data]
tracely = ["resources/*.md", "ui/templates/**/*.html", "ui/static/**/*"]
